# llvm-valuelogger

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Common.h  InstruMem.h  LoopExtractor.h
lib/: CMakeLists.txt
lib/common/: CMakeLists.txt  Common.cpp
lib/loop-extractor/: CMakeLists.txt  LoopExtractor.cpp
lib/value-inst/: CMakeLists.txt  ValueLogger.cpp
lib/value-rt/: CMakeLists.txt  helpers.cpp  helpers.h
scripts/: filter.py
sparsemap/: Address.hh  README.md  SparseMemory.hh  main  main.cc
tests/matmul/: Args.mem  Final.mem  Init.mem  matmul  matmul.bc  matmul.cpp  matmul.ll  matmul.value.bc  test
tests/matmul/sample/: Args.mem  Final.mem  Init.mem
tests/test01/: test01.c
tests/vector/: Args.mem  Final.mem  Init.mem  vector  vector.bc  vector.cpp  vector.ll  vector.value.bc
tests/vector/sample/: Args.mem  Final.mem  Init.mem
tools/: CMakeLists.txt
tools/valueloger/: CMakeLists.txt  config.h.cmake  main.cpp
